# backend/routes/api.php
@@ -17,9 +17,13 @@ Route::prefix('v1')->group(function () {
         Route::post('/register', [AuthController::class, 'register']);
     });
 
-    Route::middleware('auth:api')->get('/me', [AuthController::class, 'me']);
+    Route::middleware(['auth:api'])->group(function () {
+        Route::get('/me', [AuthController::class, 'me']);
+        Route::post('/logout', [AuthController::class, 'logout']);
+        Route::post('/refresh', [AuthController::class, 'refresh']);
+    });
 
-    Route::middleware(['auth:api', 'acl'])->group(function () {
+    Route::middleware(['auth:api', 'acl', 'user.active'])->group(function () {
         Route::apiResource('users', UserController::class);
     });
 });
